# neuralnet

./: CLAUDE.md  CMakeLists.txt
docs/: backlog.md
docs/superpowers/plans/: 2026-03-21-graph-network-neat.md
docs/superpowers/specs/: 2026-03-21-graph-network-neat-design.md
include/neuralnet/: activation.h  adapt.h  graph_network.h  layer.h  network.h  neural_neat_policy.h  neural_node_props.h  node_types.h  serialization.h
src/: activation.cpp  adapt.cpp  graph_network.cpp  layer.cpp  network.cpp  neural_neat_policy.cpp  serialization.cpp
tests/: CMakeLists.txt  activation_test.cpp  adapt_test.cpp  graph_genome_test.cpp  graph_network_test.cpp  layer_test.cpp  network_test.cpp  serialization_test.cpp  serialization_v2_test.cpp
