add_executable(neuralnet_tests)
target_sources(neuralnet_tests PRIVATE activation_test.cpp)
target_sources(neuralnet_tests PRIVATE layer_test.cpp)
target_sources(neuralnet_tests PRIVATE network_test.cpp)
target_sources(neuralnet_tests PRIVATE adapt_test.cpp)
target_sources(neuralnet_tests PRIVATE serialization_test.cpp)
target_sources(neuralnet_tests PRIVATE graph_genome_test.cpp)
target_sources(neuralnet_tests PRIVATE graph_network_test.cpp)
target_sources(neuralnet_tests PRIVATE serialization_v2_test.cpp)
target_link_libraries(neuralnet_tests PRIVATE neuralnet GTest::gtest_main project_warnings)
gtest_discover_tests(neuralnet_tests)
